# MADCF

./: CMakeLists.txt  LICENSE  README.md  resnet.pt
PESMOD/Pexels-Elliot-road/annotations/: frame0001.xml  frame0002.xml  frame0003.xml  frame0004.xml  frame0005.xml  frame0006.xml  frame0007.xml  frame0008.xml  frame0009.xml  frame0010.xml  frame0011.xml  frame0012.xml  frame0013.xml  frame0014.xml  frame0015.xml  frame0016.xml  frame0017.xml  frame0018.xml  frame0019.xml  frame0020.xml  frame0021.xml  frame0022.xml  frame0023.xml  frame0024.xml  frame0025.xml  frame0026.xml  frame0027.xml  frame0028.xml  frame0029.xml  frame0030.xml  frame0031.xml  frame0032.xml  frame0033.xml  frame0034.xml  frame0035.xml  frame0036.xml  frame0037.xml  frame0038.xml  frame0039.xml  frame0040.xml  (+614 more)
PESMOD/Pexels-Grisha-snow/annotations/: frame0001.xml  frame0002.xml  frame0003.xml  frame0004.xml  (+111 more)
VIVID/egtest01/: result-egtest01-GT.txt
VIVID/egtest02/: result-egtest02-GT.txt
VIVID/egtest03/: result-egtest03-GT.txt
VIVID/egtest04/: result-egtest04-GT.txt
VIVID/egtest05/: result-egtest05-GT.txt
VIVID/redteam/: result-redteam-GT.txt
scripts/: show-PESMOD.py  show-VIVID.py
src/: main.cpp  mytracker.cpp  mytracker.h  readData.cpp  readData.h  utils.cpp  utils.h
src/csrt_ma/: feature.hpp  featureColorName.hpp  torchModel.cpp  torchModel.hpp  tracker.hpp  trackerCSRT.cpp  trackerCSRTScaleEstimation.cpp  trackerCSRTScaleEstimation.hpp  trackerCSRTSegmentation.cpp  trackerCSRTSegmentation.hpp  trackerCSRTUtils.cpp  trackerCSRTUtils.hpp  trackerModel.cpp  trackerStateEstimator.cpp
(+2393 files in other folders)
